# sawyer_bopt

./: .gitignore  CMakeLists.txt  README.md  install.sh  package.xml  requirements.txt
assets/: traj.pickle
launch/: bopt_experiment.launch  sawyer_world.launch
model_editor_models/ball_for_cup/: model.sdf
model_editor_models/inclined_wall_30deg_0/: model.config  model.sdf
model_editor_models/inclined_wall_60deg_0_0/: model.config  model.sdf
model_editor_models/mug/: model.config  model.sdf
model_editor_models/round_tin_base/: model.sdf
model_editor_models/score_mattress/: model.config  model.sdf
model_editor_models/score_mattress_0/: model.config  model.sdf
models/ball_for_cup/: model.config  model.sdf
models/round_tin_base/: model.config  model.sdf
scripts/: bopt_experiment.py
scripts/src/: core.py  ros_bayesian_optimization.py  ros_bo.py  sampling.py
scripts/utils/: convert_rosbag_to_pickle.py  plot_bopt_from_pkl_3d.py  set_init_position.py
worlds/: bopt_exp_30.world  bopt_exp_60.world
