<?xml version="1.0"?>
<package format="2">
  <name>sawyer_bopt</name>
  <version>0.0.1</version>
  <description>The sawyer_bopt package</description>

  <maintainer email="kandai.wata@gmail.com">kandai watanabe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_msgs</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>intera_core_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>intera_core_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>intera_interface</exec_depend>
  <exec_depend>sawyer_gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
